# libcalc

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  libcalc.pc.in
include/: libcalc.hpp
src/: CMakeLists.txt  libcalc.cxx  parser.cxx  tokenizer.cxx
tests/: CMakeLists.txt  run-tests.cxx  test-calc.cxx
